criadas as telas de lista de equipe e criação de conta

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,7 +16,9 @@
       </div>
       <div class="login__new-account">
         <h5 class="mb-3">Não cadastrado?</h5>
-        <button class="button btn-block">Crie uma conta</button>
+        <a
+          href="/account"
+          class="button btn-block">Crie uma conta</a>
       </div>
     </form>
   </div>
