--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,5 @@
 $bg-color: #000a13;
-$border-color: #c79a3c;
+$border-color: #785a28;
 $text-color: #d5cBa4;
 $title-color: #c9aa71;
 $menu-border-color: #c9aa71;
