--- a/src/app/teams/teams-list/teams-list.component.scss
+++ b/src/app/teams/teams-list/teams-list.component.scss
@@ -1,1 +1,136 @@
 @import "src/scss/variables";
+
+:host {
+  display: flex;
+  width: 100%;
+}
+
+.teams {
+  display: flex;
+  flex-flow: column;
+  margin-top: 1rem;
+  width: 100%;
+}
+
+.team {
+  align-items: center;
+  border: 1px solid $border-color;
+  display: flex;
+  flex: 0 0 auto;
+  flex-flow: column;
+  flex-basis: 100%;
+  padding: 1rem;
+  & + & {
+    margin-top: 1rem;
+  }
+  &__content,
+  &__actions {
+    display: flex;
+    flex-flow: row;
+    width: 100%;
+  }
+  &__content {
+    justify-content: flex-start;
+  }
+  &__actions {
+    border-top: 1px solid rgba($border-color, .5);
+    padding-top: 1rem;
+    margin-top: 1rem;
+  }
+  &__name {
+    display: flex;
+    flex: 0 1 auto;
+    margin-bottom: 1rem;
+    width: 100%;
+  }
+  &__abbr {
+    margin-right: .5rem;
+  }
+  &__members {
+    align-items: center;
+    display: flex;
+    flex: 0 1 auto;
+    flex-flow: row;
+    width: 100%;
+    &-icon {
+      border-radius: 50%;
+      border: 2px solid rgba($border-color, .8);
+      display: inline-flex;
+      max-height: 40px;
+      margin-right: .625rem;
+      overflow: hidden;
+      position: relative;
+      max-width: 40px;
+      z-index: 1;
+    }
+    &-img {
+      height: auto;
+      width: 100%;
+    }
+  }
+  &__button {
+    display: block;
+    width: 100%;
+  }
+}
+
+@media (min-width: 768px) {
+  .teams {
+    flex-flow: row;
+    flex-wrap: wrap;
+  }
+  .team {
+    max-width: calc(50% - .5rem);
+    margin-bottom: 1rem;
+    margin-right: 1rem;
+    & +& {
+      margin-top: 0;
+    }
+    &:nth-child(2n+2) {
+      margin-right: 0;
+    }
+    &__members {
+      justify-content: space-between;
+      &-icon {
+        margin-right: 0;
+      }
+    }
+  }
+}
+
+@media (min-width: 992px) {
+  .team {
+    max-width: calc(33% - .66rem);
+    margin-bottom: 1rem;
+    margin-right: 1rem;
+    & + & {
+      margin-top: 0;
+    }
+    &:nth-child(2n) {
+      margin-right: 1rem;
+    }
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
+  }
+}
+
+@media (min-width: 1200px) {
+  .team {
+    max-width: calc(25% - .75em);
+    margin-bottom: 1rem;
+    margin-right: 1rem;
+    & + & {
+      margin-top: 0;
+    }
+    &:nth-child(2n) {
+      margin-right: 1rem;
+    }
+    &:nth-child(3n) {
+      margin-right: 1rem;
+    }
+    &:nth-child(4n) {
+      margin-right: 0;
+    }
+  }
+}
