--- a/src/app/teams/teams-list/teams-list.component.html
+++ b/src/app/teams/teams-list/teams-list.component.html
@@ -1,171 +1,42 @@
 <div class="content">
   <div class="content__header">
     <h3 class="content__title">Suas equipes</h3>
-    <a href="" class="button button--primary">Criar equipe</a>
+    <a href="/teams/new" class="button button--primary">Criar equipe</a>
   </div>
-  <div clas="content__body">
-    <div class="teams">
-      <div class="team">
-        <div class="team__name">
-          <strong class="team__abbr">TPB</strong>Tibbers, porrada e bomba
-        </div>
-        <div class="team__members">
-          <div class="team__members-icon">
-            <img
-              class="team__members-img"
-              title="SomaKruz"
-              src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/664.png" alt="">
-          </div>
-          <div class="team__members-icon">
-            <img
-              class="team__members-img"
-              title="lukahenry"
-              src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/781.png" alt="">
-          </div>
-          <div class="team__members-icon">
-            <img
-              class="team__members-img"
-              title="PHGamerazer"
-              src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/786.png" alt="">
-          </div>
-          <div class="team__members-icon">
-            <img
-              class="team__members-img"
-              title="SomaKruz"
-              src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/839.png" alt="">
-          </div>
-          <div class="team__members-icon">
-            <img
-              class="team__members-img"
-              title="lukahenry"
-              src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/774.png" alt="">
-          </div>
-          +3
-        </div>
-        <div class="team__actions">
-          <button class="team__button button button--primary">Gerenciar</button>
-        </div>
-      </div>
-      <div class="team">
-        <div class="team__name">
-          <strong class="team__abbr">HYP</strong>Harry Poke
-        </div>
-        <div class="team__members">
-          <div class="team__members-icon">
-            <img
-              class="team__members-img"
-              title="SomaKruz"
-              src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/907.png" alt="">
-          </div>
-          <div class="team__members-icon">
-            <img
-              class="team__members-img"
-              title="lukahenry"
-              src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/903.png" alt="">
-          </div>
-          <div class="team__members-icon">
-            <img
-              class="team__members-img"
-              title="PHGamerazer"
-              src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/940.png" alt="">
-          </div>
-          <div class="team__members-icon">
-            <img
-              class="team__members-img"
-              title="SomaKruz"
-              src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/989.png" alt="">
-          </div>
-          <div class="team__members-icon">
-            <img
-              class="team__members-img"
-              title="lukahenry"
-              src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/948.png" alt="">
-          </div>
-        </div>
-        <div class="team__actions">
-          <button class="team__button button button--primary">Gerenciar</button>
-        </div>
-      </div>
-      <div class="team">
-        <div class="team__name">
-          <strong class="team__abbr">HYP</strong>Harry Poke
-        </div>
-        <div class="team__members">
-          <div class="team__members-icon">
-            <img
-              class="team__members-img"
-              title="SomaKruz"
-              src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/907.png" alt="">
-          </div>
-          <div class="team__members-icon">
-            <img
-              class="team__members-img"
-              title="lukahenry"
-              src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/903.png" alt="">
-          </div>
-          <div class="team__members-icon">
-            <img
-              class="team__members-img"
-              title="PHGamerazer"
-              src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/940.png" alt="">
-          </div>
-          <div class="team__members-icon">
-            <img
-              class="team__members-img"
-              title="SomaKruz"
-              src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/989.png" alt="">
-          </div>
-          <div class="team__members-icon">
-            <img
-              class="team__members-img"
-              title="lukahenry"
-              src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/948.png" alt="">
-          </div>
-        </div>
-        <div class="team__actions">
-          <button class="team__button button button--primary">Gerenciar</button>
-        </div>
-      </div>
-      <div class="team">
-        <div class="team__name">
-          <strong class="team__abbr">TPB</strong>Tibbers, porrada e bomba
-        </div>
-        <div class="team__members">
-          <div class="team__members-icon">
-            <img
-              class="team__members-img"
-              title="SomaKruz"
-              src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/664.png" alt="">
-          </div>
-          <div class="team__members-icon">
-            <img
-              class="team__members-img"
-              title="lukahenry"
-              src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/781.png" alt="">
-          </div>
-          <div class="team__members-icon">
-            <img
-              class="team__members-img"
-              title="PHGamerazer"
-              src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/786.png" alt="">
-          </div>
-          <div class="team__members-icon">
-            <img
-              class="team__members-img"
-              title="SomaKruz"
-              src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/839.png" alt="">
-          </div>
-          <div class="team__members-icon">
-            <img
-              class="team__members-img"
-              title="lukahenry"
-              src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/774.png" alt="">
-          </div>
-        </div>
-        <div class="team__actions">
-          <button class="team__button button button--primary">Gerenciar</button>
-        </div>
-      </div>
-    </div>
+  <div class="content__body">
+    <table class="table-list">
+      <thead>
+      <tr>
+        <th>Nome</th>
+        <th></th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr class="team">
+        <td>
+          <span class="team__abbr">TPB</span>Tibbers, porrada e bomba
+        </td>
+        <td class="table-list__actions">
+          <button class="button button--primary">Gerenciar</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <span class="team__abbr">HYP</span>Harry Poke
+        </td>
+        <td class="table-list__actions">
+          <button class="button button--primary">Gerenciar</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <span class="team__abbr">ADD</span>Armada Dumbledore
+        </td>
+        <td class="table-list__actions">
+          <button class="button button--primary">Gerenciar</button>
+        </td>
+      </tr>
+      </tbody>
+    </table>
   </div>
 </div>
