--- a/src/app/vacancies/vacancies.component.html
+++ b/src/app/vacancies/vacancies.component.html
@@ -70,7 +70,7 @@
       <a href="" class="button d-inline-flex">Limpar</a>
     </div>
   </form>
-  <table class="advertisements-list">
+  <table class="table-list advertisements-list">
     <thead>
     <tr>
       <th>Posição</th>
