--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "scss/variables";
 @import "scss/buttons";
+@import "scss/tables";
 @import "scss/typography";
 @import "scss/view";
 @import "scss/bootstrap-override";
