--- a/src/scss/_tables.scss
+++ b/src/scss/_tables.scss
@@ -5,7 +5,13 @@
   thead {
     color: $title-color;
     th {
-      padding-bottom: .5rem;
+      padding: 0 .5rem .5rem;
+    }
+    th:first-child {
+      padding-left: 0;
+    }
+    th:last-child {
+      padding-right: 0;
     }
   }
   tbody {
