--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -59,7 +59,8 @@
   color: #deca9b;
   cursor: pointer;
   font-size: 12px;
-  height: 32px;
+  height: 38px;
+  line-height: 23px;
   padding: .435rem .975rem;
   text-align: center;
   text-decoration: none;
