--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -33,24 +33,32 @@
     *ngIf="!isLoggedIn"
     routerLink="login"
     class="user__login">Entrar</a>
+  <ng-container *ngIf="isLoggedIn">
+    <img
+      (click)="toggleMenuUser()"
+      class="user__icon"
+      title="lukahenry"
+      src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/781.png" alt="">
+      <div
+        (click)="toggleMenuUser()"
+        class="user__name">{{ nickname }}</div>
+  </ng-container>
+  <ul
+    [class.menu--show]="showMenuUser"
+    class="menu menu--user">
+    <li class="menu__item">
+      <a
+        (click)="hideMenuUser()"
+        routerLinkActive="menu__link--active"
+        routerLink="/account"
+        class="menu__link">Minha conta</a>
+    </li>
+    <li class="menu__item">
+      <a
+        (click)="logout()"
+        routerLinkActive="menu__link--active"
+        routerLink="teams"
+        class="menu__link">Sair</a>
+    </li>
+  </ul>
 </div>
-
-<ng-container *ngIf="showLoginForm">
-  <form class="login">
-    <div class="form-group">
-      <label for="email" class="form-control-label">Email</label>
-      <input type="text" id="email" class="form-control form-control-sm">
-    </div>
-    <div class="form-group">
-      <label for="password" class="form-control-label">Senha</label>
-      <input type="password" id="password" class="form-control form-control-sm">
-    </div>
-    <a class="login__forgotten">Esqueci minha senha</a>
-    <div class="login__button">
-      <button
-        (click)="toggleLoginForm()"
-        class="btn btn-secondary">Cancelar</button>
-      <button class="btn btn-primary">Entrar</button>
-    </div>
-  </form>
-</ng-container>
