--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,18 +1,30 @@
 <div class="row">
   <div class="mx-auto col-9 col-sm-6 col-md-5 col-lg-4">
-    <form class="login">
+    <form
+      [formGroup]="form"
+      class="login">
       <h5>Login</h5>
       <div class="form-group">
         <label for="email" class="form-control-label">Email</label>
-        <input type="text" id="email" class="form-control form-control-sm">
+        <input
+          type="text"
+          id="email"
+          formControlName="email"
+          class="form-control">
       </div>
       <div class="form-group">
         <label for="password" class="form-control-label">Senha</label>
-        <input type="password" id="password" class="form-control form-control-sm">
+        <input
+          type="password"
+          id="password"
+          formControlName="password"
+          class="form-control">
       </div>
       <a class="login__forgotten">Esqueci minha senha</a>
       <div class="login__button">
-        <button class="button button--primary btn-block">Entrar</button>
+        <button
+          (click)="login()"
+          class="button button--primary btn-block">Entrar</button>
       </div>
       <div class="login__new-account">
         <h5 class="mb-3">Não cadastrado?</h5>
