--- a/src/app/teams/teams-vacancies/teams-vacancies.component.html
+++ b/src/app/teams/teams-vacancies/teams-vacancies.component.html
@@ -1,3 +1,54 @@
-<p>
-  teams-vacancies works!
-</p>
+<form class="container-fluid px-0">
+  <div class="row align-items-end mb-3">
+    <div class="col-12 col-md-4">
+      <div class="form-group mb-0">
+        <label for="tier-min">Posição</label>
+        <select id="tier-min" class="form-control">
+          <option value="">Selecione</option>
+          <option value="adc">Atirador</option>
+          <option value="jg">Caçador</option>
+          <option value="mid">Meio</option>
+          <option value="sup">Suporte</option>
+          <option value="top">Topo</option>
+        </select>
+      </div>
+    </div>
+    <div class="col-12 col-md-3">
+      <button class="button button--primary">Anunciar vaga</button>
+    </div>
+  </div>
+</form>
+<table class="table-list">
+  <thead>
+  <tr>
+    <th>Posição</th>
+    <th></th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr class="member">
+    <td>
+      <img src="assets/images/top-icon.png" alt="" class="member__position">
+    </td>
+    <td class="table-list__actions">
+      <button class="button button--warning">Remover</button>
+    </td>
+  </tr>
+  <tr class="member">
+    <td>
+      <img src="assets/images/mid-icon.png" alt="" class="member__position">
+    </td>
+    <td class="table-list__actions">
+      <button class="button button--warning">Remover</button>
+    </td>
+  </tr>
+  <tr class="member">
+    <td>
+      <img src="assets/images/jungle-icon.png" alt="" class="member__position">
+    </td>
+    <td class="table-list__actions">
+      <button class="button button--warning">Remover</button>
+    </td>
+  </tr>
+  </tbody>
+</table>
