--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,6 @@
+$color-error: #820000;
 $bg-color: #000a13;
+$bg-error: $color-error;
 $border-color: #785a28;
 $text-color: #d5cBa4;
 $title-color: #c9aa71;
